基本完成，待修复未知bug
